--- a/900-lakdiva.Rmd
+++ b/900-lakdiva.Rmd
@@ -522,6 +522,15 @@ bcftools view -r NC_066835.1:1-17500000 outputs/900/snps-wgs-cal-down-plink.vcf.
 bcftools view -r NC_066837.1:5247652- outputs/900/snps-wgs-cal-down-plink.vcf.gz| bcftools reheader --samples bamlists/70.names   | bcftools +fill-tags | bcftools view -q 0.05:minor | bcftools +prune -m 0.30 -w 50kb --nsites-per-win 1 > outputs/900/newhybrids-lca05inv.vcf
 ```
 
+
+
+```{r}
+tree<-read.tree("outputs/900/snps-wgs-cal-down-plink-pruned.min4.phy.varsites.phy.contree")
+tree<-midpoint.root(tree)
+ggtree(tree) %<+% m70 +
+  geom_tiplab(aes(label=Region)) 
+```
+
 ## Inversion zone
 
 ```{r}
@@ -736,10 +745,13 @@ u<-t %<+% meta + #bind_rows(m58, rm) +
 u
 
 ggsave("outputs/900/concatenated-tree-70inds.jpeg", width=9, height=9)
+ggsave("outputs/900/concatenated-tree-70inds.pdf", width=9, height=9)
+
 ```
 
 
 Network version
+
 
 ```{r}
 dat<-read.dna(file="outputs/900/snps-wgs-cal-down-plink-pruned.min4.phy")
