--- a/1002-Malaysia.Rmd
+++ b/1002-Malaysia.Rmd
@@ -17,19 +17,20 @@ library(ggrepel)
 ```
 
 ```{r}
-
 malaysia<-map_data("world",region="Malaysia")
 peninsula<-malaysia %>% filter(long<105)
+borneo<-malaysia %>% filter(long>105)
+
 dg<-malaysia
 ```
 
 ```{r}
-sites<-read_tsv("outputs/1002/sample-sites.tsv")
+sites<-read_tsv("outputs/1002/sample-sites-borneo.tsv")
 sites
-````
+```
 
 ```{r}
-ggplot(peninsula) +
+ggplot(borneo) +
   geom_polygon(aes(x=long, y=lat, group=group), size=1, color="black", fill="NA", linewidth=0.5) +
   geom_point(data=sites, aes(x=Longitude, y=Latitude, fill=`Drainage`), pch=21, alpha=0.75) +
   geom_text_repel(data=sites, aes(x=Longitude, y=Latitude, label=paste0(Drainage,"\n",Location))) +
@@ -86,7 +87,7 @@ load("outputs/1002/rast.rda")
 ggplot() +
   geom_raster(data = rast.table, mapping = aes(x = x, y = y), fill = rast.table$rgb, interpolate = TRUE)  +
   geom_polygon(data=malaysia,aes(x=long, y=lat, group=group), size=1, color="black", fill="NA", linewidth=0.25) +
-  geom_point(data=sites, aes(x=Longitude, y=Latitude, fill=`Drainage`), pch=21, alpha=0.75) +
+  geom_point(data=sites, aes(x=Longitude, y=Latitude, fill=`Drainage`), pch=21, alpha=0.75, cex=5) +
   geom_text_repel(data=sites, aes(x=Longitude, y=Latitude, label=paste0(Drainage,"\n",Location)), size=3) +
   scale_fill_viridis_d(option="H") + 
   ylab("Latitude\n") +
@@ -94,10 +95,7 @@ ggplot() +
   theme_bw() +
   theme(panel.grid=element_blank()) +
   theme(legend.position = "none") +
-  coord_fixed(1.3, xlim=c(97,108), ylim=c(0,9))
+  coord_fixed(1.3, xlim=c(97,120), ylim=c(0,9))
 ggsave("outputs/1002/potential-sample-sites.jpeg")
 ```
 
-Code for meeting    
-
-7p3k3td
