--- a/1002-Malaysia.Rmd
+++ b/1002-Malaysia.Rmd
@@ -32,8 +32,8 @@ sites
 ```{r}
 ggplot(borneo) +
   geom_polygon(aes(x=long, y=lat, group=group), size=1, color="black", fill="NA", linewidth=0.5) +
-  geom_point(data=sites, aes(x=Longitude, y=Latitude, fill=`Drainage`), pch=21, alpha=0.75) +
-  geom_text_repel(data=sites, aes(x=Longitude, y=Latitude, label=paste0(Drainage,"\n",Location))) +
+  geom_point(data=sites, aes(x=Longitude, y=Latitude, fill=Location), pch=21, alpha=0.75) +
+  geom_text_repel(data=sites, aes(x=Longitude, y=Latitude, label=Location))+
   scale_fill_viridis_d(option="H") + 
   coord_fixed(ratio=1.3)
 
@@ -87,8 +87,8 @@ load("outputs/1002/rast.rda")
 ggplot() +
   geom_raster(data = rast.table, mapping = aes(x = x, y = y), fill = rast.table$rgb, interpolate = TRUE)  +
   geom_polygon(data=malaysia,aes(x=long, y=lat, group=group), size=1, color="black", fill="NA", linewidth=0.25) +
-  geom_point(data=sites, aes(x=Longitude, y=Latitude, fill=`Drainage`), pch=21, alpha=0.75, cex=5) +
-  geom_text_repel(data=sites, aes(x=Longitude, y=Latitude, label=paste0(Drainage,"\n",Location)), size=3) +
+  geom_point(data=sites, aes(x=Longitude, y=Latitude, fill=Location), pch=21, alpha=0.75, size=3) +
+  geom_label_repel(data=sites, aes(x=Longitude, y=Latitude, label=Location))+
   scale_fill_viridis_d(option="H") + 
   ylab("Latitude\n") +
   xlab("\nLongitude") +
