Setting up taiwanese align

--- a/1203-mtdna.Rmd
+++ b/1203-mtdna.Rmd
@@ -210,3 +210,55 @@ SRR3183270 needs more ram 486.992GB
 SRR3183271 needs more ram
 
 SRR3165612 looks fragmentary
+
+## Annotated 
+SRR3165613 >NODE_326_length_17913_cov_28.471721
+
+this does not have local duplications, and is contiguous, so it is quite long.
+15747..17912
+
+\>SRR3165613
+ATATAATTATACATATATGTATTTACACCATGCATTTATGCTAACCAATAAGTGAATATA
+TGGTGTAAATGCATATATATATATATGTATTAATCAACATCTGCTTGTAATCAAAGGACA
+TATGTGCATTCAATGGTATTCGTAAATGTAATGTACGGTGACCTATAATTAATGTACTTT
+AAACAATAATATTACATATTAATCATCAACAATAATTATTGGGCGTAGTGAGAGATCACC
+AATTAGTAGGTACTCAGAGTGTTGACGGTTCTTGATAGTCAAGGACAAACACGGCGTGGG
+GGTTACACAAATTGAACTATTACTGGCATTTGGTTCCTACCTCAGGTACATGGATGAGAA
+AGATTCCACTGACGTTCCTTCATAAATGGCATAAGTTAATGGTGGATAACATGAATCCTC
+GTTACCCACCAAGCCGAGCATTCTTTCCAGCGGGTAAGGGGTTTAATAATTTTTTTCTTA
+TCATCTCATTTGACATCTCAGAGTGCACGCGCAGAGCATATAATATGGAAGTAGAACATA
+AATCTTTTTATGGAAGAGAAATAGTCAGTATGAATGGTGAAAAGACTTGACCTGAAGAAT
+TACATGATAGGATATCACGAGCATAACGTGCTAACCTTCTACTCCCAACATATCTATTAA
+TCCACCCCGTTTTTATTACGCAACCCCCCCCCCCCCCCCCCACGAAAGTTCTTTTATCTC
+ACCACACAAATTTTTCAACAATTATTCATACTTTGGGTGAGGTGTTAGTTTTTCGTCATA
+ATTTTAGACACCCACACGCACACAAAGCCACACATTCATCCCGCGCACACATACACCACC
+TCCATTCTCGGCATCACAAGGCCACCTCTTCTTCTCTCCAGCCCCCACCCTCCTCTCCCT
+CTTCCTCTCTGTCTCTCTCTCTTTTCTTTCCTGCTCTCACTTCCCGCCTGCCCTTCTCCC
+CCCTTTCCCATTATTTCATCTGTTCTTTTTTTTTTTTTCCTCTTGCCTCCTCATCTCACA
+TCCTTTTCTCTCCTCACCTTTTTCCCGTTCCTTCACTTCACCCTGGCCCCCGTCCTCCCT
+GTGCCCTCTGCTCCGTCCCAGCTGCATCTCCCTCCCTCGCTTTTTTCCCTCCCACTCCTT
+AATCTTCCACCTCTCCTCCTCCTCCACCACCCCCTCCTCTGCTGTAAGTGGGCCAGGTGC
+CTCCTGTGGCCTCCCCTACTCCATTTCTCATTTTTACCCTTCCTCTACTCCCTTTCTCAT
+TTTTACCCTCTCCCTGTTCCCTTTCTCATTTTTATCCTTCCCCCTGACCCTAGCTCATAT
+TTATACATCCTGTTAATGCAACAGCTCGCGTCAATGGACGACAGGTCCAGTTTTCCTGGT
+AAAACACAAACATTTTTTGGCCTGATGCACCATTAGTTGCAAAGTTGAGCCGTCCAAGTT
+AGAACAACTTCTCTCTTGAGGTTAGAGGGTGATGTCTCAAAGAGGGGAGTGGGTGATTTT
+GAAATTAAAAGGCGTTTTCAGCACTGAAAGACTCATTCTTAGTATGTATCATTTCGTGAA
+CTTTATAAATCCGCGATGAAAGTGCTGCTTTGTCATTGTTGCTGGACATTTTACGAGCTC
+TCCTGCGTTAGTGTGGTTCCCTTTATGAACACGAGACGTGAAGCCAATCCAAATGTGAAC
+AGAAGTGAGTAAGTTCACATCCCCTTTTCAGTGGTGAGGGGCAAATTTCCCCAACGGCCT
+ACTCTCCACTCCTCCCAGTGTTGCATCTGCACAAGCACACACACACACACACACACACAC
+ACACACCGAAACATGCGTATACATGGAAGTCTCATTGTTTCTGTCTTTTTGTTCTCCTCT
+CGCTCTGTGAATGCACACGGTGAGCTGGCAGTGCGCTTTTCACCTCATCTCATCCCCTGT
+ATTTTCTTCTTTTTTTTCCCCCCACACTCTTCCTCTTTTCACTCATTGTCATTCTCTTTG
+CCTTTGTCTCTGGCTGGCTCTTTCCCTTGCCCTCTTCTTTTTTCTTTTTTTTTTTTTTTT
+TTCTTCCCCTTTTCCTCACCCCCCCCCCCCCCCCCCCTTTTTTTTTTCCCCCCCCCCCCC
+CCCCCCCACAATAACTTGATCTTAATCTAAAAATGCACTATTTACACTATTTAAAATATT
+TTAAGA
+
+Checking ORF finder with vert mitochondrial Returns one long ORF at the end (and a few others)
+>lcl|ORF4
+MYHFVNFMNPRWKCCFVIVAGHFTSSPALVWFPLWTRDVKPIQMWTEVSK
+FTSPFQWWGANFPNGLLSTPPSVASAQAHTHTHTHTHTETCVYMEVSLFL
+SFCSPLALWMHTVSWQCAFHLISSPVFSSFFSPHTLPLFTHCHSLCLCLW
+LALSLALFFFLFFFFFSSPFPHPPPPPPFFFSPPPPPPTMTWS
